5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_2446.log
== TEST (2019-04-09 11:52:44) 
-- CODE:
senha=int(input())

sexto=senha//100000;
segundo=(senha//100)%10
print(segundo)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:53:17) 
-- CODE:
senha=int(input())

sexto=senha//100000;
segundo=(senha//1000)%10
print(segundo)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:53:52) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
print(segundo)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:55:16) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%1000
print (quarto )
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:55:31) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//1000)%1000
print (quarto )
-- OUTPUT:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:56:08) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%1000
print (quarto )
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:11:27) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%1000
print (quarto )
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%100
print (quarto )
-- OUTPUT:
76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:12) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%1000
print (quarto )
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:23) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10
print (quarto )
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:17:26) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
terceiro=(senha%100)//100,
print(terceiro)
-- OUTPUT:
(0,)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:17:41) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
terceiro=(senha%100)//10,
print(terceiro)
-- OUTPUT:
(1,)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:37) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha/100)%100
print(terceiro)
-- OUTPUT:
76.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:52) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//100)%1000
print(terceiro)
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:19:03) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//100)%10
print(terceiro)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:19:19) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10
print(terceiro)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:21:20) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if((sexto+segundo+quarto)%(primeiro+terceiro+quinto=0)):
	print("acesso liberado")
else
	print("senha invalida")
-- ERROR:
File "XXXX", line 11
    if((sexto+segundo+quarto)%(primeiro+terceiro+quinto=0)):
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:21:39) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if (sexto+segundo+quarto)%(primeiro+terceiro+quinto=0):
	print("acesso liberado")
else
	print("senha invalida")
-- ERROR:
File "XXXX", line 11
    if (sexto+segundo+quarto)%(primeiro+terceiro+quinto=0):
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:22:09) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else
	print("senha invalida")
-- ERROR:
File "XXXX", line 13
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:22:16) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:22:31) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:22:48) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.133211
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:38) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:27:39) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:27:52) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if ((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:28:19) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if (((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:28:22) 
-- CODE:
senha=int(input())

sexto=senha%100000;
segundo=(senha//10000)%10
quarto=(senha//100)%10

primeiro=senha//100000;
quinto=(senha%100)//10
terceiro=(senha//1000)%10

if (((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.15615
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:49) 
-- CODE:
senha=int(input())

sexto=senha%100000;
print(sexto)
segundo=(senha//10000)%10
print(segundo)
quarto=(senha//100)%10
print(quarto)
primeiro=senha//100000;
print(primeiro)
quinto=(senha%100)//10
print(quinto)
terceiro=(senha//1000)%10
print(terceiro)
if (((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
87612
8
6
0
1
7
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:38) 
-- CODE:
senha=int(input())

sexto=senha//100000;
print(sexto)
segundo=(senha//10000)%10
print(segundo)
quarto=(senha//100)%10
print(quarto)
primeiro=senha//100000;
print(primeiro)
quinto=(senha%100)//10
print(quinto)
terceiro=(senha//1000)%10
print(terceiro)
if (((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
8
6
0
1
7
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:14) 
-- CODE:
senha=int(input())

sexto=senha%10;
print(sexto)
segundo=(senha//10000)%10
print(segundo)
quarto=(senha//100)%10
print(quarto)
primeiro=senha//100000;
print(primeiro)
quinto=(senha%100)//10
print(quinto)
terceiro=(senha//1000)%10
print(terceiro)
if (((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
2
8
6
0
1
7
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:31:36) 
-- CODE:
senha=int(input())

sexto=senha%10;

segundo=(senha//10000)%10

quarto=(senha//100)%10

primeiro=senha//100000;

quinto=(senha%100)//10

terceiro=(senha//1000)%10

if (((sexto+segundo+quarto)%(primeiro+terceiro+quinto))==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.152972
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
